Fixup the drmModePageFlip issue 1. Fixup the drmModePageFlip issue; 2. Fixup the progress bar over border issue; [Qing]

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -221,6 +221,9 @@ ifeq ($(CONFIG_BOOTLOADER_EBG),y)
 LDLIBS += ebgenv z
 endif
 
+## for recovery UI.
+LDLIBS += png drm
+
 # SWU forwarder
 ifneq ($(CONFIG_SWUFORWARDER_HANDLER),)
 LDLIBS += websockets uriparser
